# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  30 May 2007; Roy Marples <uberlord@gentoo.org>:

    Only call systohw in clock when we don't have adjfile or we aren't UTC.

* baselayout-2.0.0_alpha3 (14 May 2007)

  14 May 2007; Roy Marples <uberlord@gentoo.org>:

    RC_INTERACTIVE now works, #178331.
    Add --startas back to s-s-d, #175980, #175981.
    Allow time for pidfiles to be created, #178274.
    Use int instead of char for getopt, #177202 #178084 thanks to drizztbsd.

  11 May 2007; Roy Marples <uberlord@gentoo.org>:

    Store the defined random pool size, #177722 thanks to Yaroslav Isakov.
    Use auto for /mnt/cdrom, #177990.
	Use clock MONOTONIC to timeout, not localtime, #177514.

  08 May 2007; Roy Marples <uberlord@gentoo.org>:

    When we don't have an address return 1, #176577.

  05 May 2007; Roy Marples <uberlord@gentoo.org>:

    Fix KV_to_int working with funky kernel versions, #177197.

* baselayout-2.0.0_alpha2 (04 May 2007)

  04 May 2007; Roy Marples <uberlord@gentoo.org>:

    Fix unicode keymaps, #173528.
	Some fonts show the currency symbol instead of the Euro when doing
	AltGr-E, so we provide an easy setting to fix this.

  03 May 2007; Roy Marples <uberlord@gentoo.org>:

    Allow ip6to4 tunnels to use any derived address, #170290.

    dns_sortlist and dns_options now work as documented, #175367.

  02 May 2007; Roy Marples <uberlord@gentoo.org>:

    SSD_NICELEVEL can now affect the nicelevel for daemons started
    by start-stop-daemon, #175397.

    Don't delete addresses for PPP interfaces, #176764.

  30 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    Stop using the [ -z "$@" ] test, use [ $# = 0 ] instead, #176554.

    /etc/init.d/foo start and stop no longer exit when service is fully
    started or stopped, #176452.

  27 Apr 2007; Roy Marples <uberlord@gentoo.org>:

    env-update now respects COLON_SEPARATED and SPACE_SEPARATED env.d